# Forradia

./: .clang-format  .clangd  .gitignore  CMake.code-workspace  CMakeLists.txt  CommonCoreUtilities.code-workspace  CommonGeneral.code-workspace  CommonLang.code-workspace  CommonMatter.code-workspace  CommonUtilities.code-workspace  CoreAssets.code-workspace  CoreEngine.code-workspace  CoreGUI.code-workspace  CoreGraphicsDevices.code-workspace  CoreInput.code-workspace  CoreMinorComponents.code-workspace  CoreRendering.code-workspace  CoreRenderingColors2D.code-workspace  CoreRenderingCommon.code-workspace  CoreRenderingGround.code-workspace  CoreRenderingImages2D.code-workspace  CoreRenderingModels.code-workspace  CoreRenderingSky.code-workspace  CoreRenderingText.code-workspace  CoreScenes.code-workspace  Forradia.code-workspace  README.md  Theme0.code-workspace  Theme0Core.code-workspace  Theme0CustomGUI.code-workspace  Theme0Essentials.code-workspace  Theme0Properties.code-workspace  Theme0Scenes.code-workspace  Theme0Scripts.code-workspace  Theme0WorldGen.code-workspace  Theme0WorldGeneration.code-workspace  Theme0WorldGenerationCommon.code-workspace  Theme0WorldGenerationEntities.code-workspace  Theme0WorldGenerationGround.code-workspace  Theme0WorldGenerationMain.code-workspace  (+33 more)
Desktop/code/: CMakeLists.txt
Desktop/code/client/CommonCoreUtilities/: CMakeLists.txt
Desktop/code/client/CommonGeneral/: CMakeLists.txt
Desktop/code/client/CommonLang/: CMakeLists.txt
Desktop/code/client/CommonMatter/: CMakeLists.txt
Desktop/code/client/CommonUtilities/: CMakeLists.txt
Desktop/code/client/CoreAssets/: CMakeLists.txt
Desktop/code/client/CoreEngine/: CMakeLists.txt
Desktop/code/client/CoreGUI/: CMakeLists.txt
Desktop/code/client/CoreGraphicsDevices/: CMakeLists.txt
Desktop/code/client/CoreInput/: CMakeLists.txt
Desktop/code/client/CoreMinorComponents/: CMakeLists.txt
Desktop/code/client/CoreRenderingColors2D/: CMakeLists.txt
Desktop/code/client/CoreRenderingCommon/: CMakeLists.txt
Desktop/code/client/CoreRenderingGround/: CMakeLists.txt
Desktop/code/client/CoreRenderingImages2D/: CMakeLists.txt
Desktop/code/client/CoreRenderingModels/: CMakeLists.txt
Desktop/code/client/CoreRenderingSky/: CMakeLists.txt
Desktop/code/client/CoreRenderingText/: CMakeLists.txt
Desktop/code/client/CoreScenes/: CMakeLists.txt
Desktop/code/client/ForradiaEngine/: CMakeLists.txt
Desktop/code/client/JewelryMakerTheme/: CMakeLists.txt
Desktop/code/client/RiverDiggerTheme/: CMakeLists.txt
Desktop/code/client/Theme0/: CMakeLists.txt
Desktop/code/client/Theme0Core/: CMakeLists.txt
Desktop/code/client/Theme0CustomGUI/: CMakeLists.txt
Desktop/code/client/Theme0Essentials/: CMakeLists.txt
Desktop/code/client/Theme0Properties/: CMakeLists.txt
Desktop/code/client/Theme0Scenes/: CMakeLists.txt
Desktop/code/client/Theme0WorldGeneration/: CMakeLists.txt
Desktop/code/client/Theme0WorldGenerationCommon/: CMakeLists.txt
Desktop/code/client/Theme0WorldGenerationEntities/: CMakeLists.txt
Desktop/code/client/Theme0WorldGenerationGround/: CMakeLists.txt
Desktop/code/map_editor/: CMakeLists.txt
desktop/: .clang-format  .gitignore  CMakeLists.txt  all.hpp  outliner.hpp  run.sh
desktop/RawImages/SceneGraphics/: DefaultSceneBackground.kra
desktop/RawModels/: box_test.blend
desktop/RawModels/Creatures/: CreatureRedBird.blend  CreatureRedBird.blend1  creature_white_rabbit.blend  creature_white_rabbit.blend1
desktop/RawModels/Objects/: ObjectBirchTree.blend  ObjectBirchTree.blend1  ObjectBrownMushroom.blend  ObjectBush1.blend  ObjectComputer.blend1  ObjectFelledTree.blend  ObjectFirTree.blend  ObjectFirTree.blend1  ObjectLandClaimBanner.blend1  ObjectMetalScrap.blend  ObjectMetalScraps.blend  ObjectMetalScraps.blend1  ObjectPinkFlower.blend  ObjectWoodWallNorth.blend  ObjectWoodWallSouth.blend  object_bush1.blend1  object_stone_boulder.blend  object_tall_grass.blend1
desktop/RawModels/Player/: PlayerFemale.blend1
desktop/RawModels/Robots/: RobotMechWolf.blend  RobotMechWolf.blend1  RobotWolf.blend
desktop/Resources/Models/: ObjectBirchTree.mtl  ObjectBirchTreeBranch2.mtl  ObjectBirchTreeBranch3.mtl  ObjectBrownMushroom.mtl  ObjectBush1.mtl  ObjectFelledTree.mtl  ObjectFirTreeNeedles1.mtl  ObjectFirTreeNeedles3.mtl  ObjectFirTreeNeedles4.mtl  ObjectMetalScrap.mtl  ObjectMetalScraps.mtl  ObjectPinkFlower.mtl  ObjectWoodWallNorth.mtl  ObjectWoodWallSouth.mtl  ObjectWoodWallWest.mtl  Player.mtl  creature_white_rabbit.mtl  object_fir_tree_needles_1.mtl  object_fir_tree_needles_4.mtl  object_fir_tree_trunk_part.mtl  object_pink_flower.mtl  object_stone_boulder.mtl  object_tall_grass.mtl
desktop/Resources/models/: box_test.mtl  object_birch_tree_branch_1.mtl  object_birch_tree_branch_3.mtl  object_birch_tree_trunk_part.mtl  object_fir_tree_needles_3.mtl
desktop/Scripts/: Build.sh  Run.sh
desktop/cmake/: CMakeLists.txt
desktop/code/: CMakeLists.txt
desktop/design/: design.txt
desktop/raw_models/objects/: object_bush1.blend  object_bush1.blend1
desktop/raw_models/player/: player.blend  player.blend1
desktop/res/models/: object_birch_tree_branch_2.mtl  object_birch_tree_branch_4.mtl  object_bush1.dae  object_bush1.mtl  object_bush2.mtl  object_felled_tree.mtl  object_fir_tree_needles_2.mtl  player.mtl
desktop/res/theme_0_scripts/: scenes.py
desktop/src_comm/: comm.cpp  comm.hpp  std_afx.hpp
desktop/src_common/: std_afx.hpp
desktop/src_core/: core.cpp  core.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  models.hpp  rend.cpp  rend.hpp  std_afx.hpp
desktop/src_engine/: engine.cpp  engine.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  models.cpp  models.hpp  rend.cpp  rend.hpp  std_afx.hpp
desktop/src_theme_0/: core.cpp  core.hpp  game_props.hpp  gui_spec.cpp  gui_spec.hpp  main.cpp  scripts.cpp  scripts.hpp  std_afx.hpp  theme_0_core.cpp  theme_0_core.hpp  update.cpp  update.hpp  world_grator.cpp  world_grator.hpp  world_view.cpp  world_view.hpp
desktop/src_theme_0_world_struct/: std_afx.hpp  world_struct.cpp  world_struct.hpp
(+2838 files in other folders)
