cmake_minimum_required(VERSION 3.0)

project(Forradia)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(./client/CommonLang/)
add_subdirectory(./client/CommonGeneral/)
add_subdirectory(./client/CommonMatter/)
add_subdirectory(./client/CommonUtilities/)
add_subdirectory(./client/CommonCoreUtilities/)
add_subdirectory(./client/CoreGraphicsDevices/)
add_subdirectory(./client/CoreAssets/)
add_subdirectory(./client/CoreInput/)
add_subdirectory(./client/CoreRenderingCommon/)
add_subdirectory(./client/CoreRenderingColors2D/)
add_subdirectory(./client/CoreRenderingImages2D/)
add_subdirectory(./client/CoreRenderingText/)
add_subdirectory(./client/CoreRenderingGround/)
add_subdirectory(./client/CoreRenderingModels/)
add_subdirectory(./client/CoreRenderingSky/)
add_subdirectory(./client/Theme0WorldStructure/)
add_subdirectory(./client/Theme0Properties/)
add_subdirectory(./client/CoreGUI/)
add_subdirectory(./client/Theme0WorldGenerationCommon/)
add_subdirectory(./client/Theme0WorldGenerationGround/)
add_subdirectory(./client/Theme0WorldGenerationWater/)
add_subdirectory(./client/Theme0WorldGenerationObjects/)
add_subdirectory(./client/Theme0WorldGenerationEntities/)
add_subdirectory(./client/Theme0WorldGenerationMain/)
add_subdirectory(./client/Theme0Essentials/)
add_subdirectory(./client/CoreMinorComponents/)
add_subdirectory(./client/CoreScenes/)
add_subdirectory(./client/CoreEngine/)
add_subdirectory(./client/Theme0Core/)
add_subdirectory(./client/Theme0CustomGUI/)
add_subdirectory(./client/Theme0/)

install(TARGETS Forradia RUNTIME DESTINATION bin)
