cmake_minimum_required(VERSION 3.0)

project(Forradia)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(./client/common_lang/)
add_subdirectory(./client/common_general/)
add_subdirectory(./client/common_matter/)
add_subdirectory(./client/common_utilities/)
add_subdirectory(./client/common_core_utilities/)
add_subdirectory(./client/core_graphics_devices/)
add_subdirectory(./client/core_assets/)
add_subdirectory(./client/core_input/)
add_subdirectory(./client/core_rendering_common/)
add_subdirectory(./client/core_rendering_colors_2d/)
add_subdirectory(./client/core_rendering_images_2d/)
add_subdirectory(./client/core_rendering_text/)
add_subdirectory(./client/core_rendering_ground/)
add_subdirectory(./client/core_rendering_models/)
add_subdirectory(./client/theme_0_world_struct/)
add_subdirectory(./client/theme_0_properties/)
add_subdirectory(./client/core_gui/)
add_subdirectory(./client/theme_0_world_gen/)
add_subdirectory(./client/theme_0_essentials/)
add_subdirectory(./client/core_minor_components/)
add_subdirectory(./client/core_scenes/)
add_subdirectory(./client/core_engine/)
add_subdirectory(./client/theme_0/)

install(TARGETS Forradia RUNTIME DESTINATION bin)
