cmake_minimum_required(VERSION 3.5)

project(Forradia)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

file(GLOB_RECURSE SOURCES "./src/*.cpp")
add_library(ForradiaCoreGUI ${SOURCES})
target_include_directories(ForradiaCoreGUI PUBLIC
    "./src"
)
target_precompile_headers(ForradiaCoreGUI PUBLIC ./src/PCH.hpp)
target_link_libraries(ForradiaCoreGUI
    ForradiaCoreMinorComponents
    ForradiaCoreRenderingColors2D
    ForradiaCoreRenderingText
    ForradiaCoreEngine
)
